--- a/Formule1/Views/Home/Index.cshtml
+++ b/Formule1/Views/Home/Index.cshtml
@@ -3,9 +3,9 @@
 }
 
 <div class="jumbotron">
-    <h1>Check onze Formule 1 Manager super vet kool</h1>
-    <p class="lead">Hier heb je 500 moneh</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-large">Lekker racen&raquo;</a></p>
+    <h1>Formule 1 manager</h1>
+    
+    <p><a href="http://asp.net" class="btn btn-primary btn-large">Racen (coming soon)&raquo;</a></p>
 </div>
 
 <div class="row">
@@ -15,9 +15,5 @@
     <div class="col-md-4">
        
     </div>
-    <div class="col-md-4">
-        <h2>Ruben is facking goed</h2>
-        <p>Hij maakt beste website eva.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+ 
 </div>
