--- a/Formule1/Views/Profile/Create.cshtml
+++ b/Formule1/Views/Profile/Create.cshtml
@@ -38,7 +38,8 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.EngineID, new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                  @Html.DropDownListFor(model => model.EngineID, new SelectList(ViewBag.Engine, "ID", "Name"), "Select an Engine")
+             
+                         @Html.DropDownListFor(model => model.EngineID, new SelectList(ViewBag.Engine, "ID", "Name","Money"), "Select an Engine")
                 </div>
             </div>
     
