Chassis kopen , en Driver kopen (Werkt hier nog niet met id meegeven)

--- a/Formule1/Views/Profile/Index.cshtml
+++ b/Formule1/Views/Profile/Index.cshtml
@@ -33,6 +33,9 @@
                 @Html.DisplayNameFor(model => model.DriverID)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.SecondDriverID)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.ChassisID)
             </th>
             <th></th>
