--- a/Formule1/Views/Profile/Create.cshtml
+++ b/Formule1/Views/Profile/Create.cshtml
@@ -47,7 +47,15 @@
                 @Html.LabelFor(model => model.DriverID, new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
 
-                    @Html.DropDownListFor(model => model.DriverID, new SelectList(ViewBag.Engine, "ID", "Name", "Money"), "Select a Driver")
+                    @Html.DropDownListFor(model => model.DriverID, new SelectList(ViewBag.Driver, "ID", "Name", "Money"), "Select a Driver")
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.SecondDriverID, new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+
+                    @Html.DropDownListFor(model => model.SecondDriverID, new SelectList(ViewBag.Driver2, "ID", "Name", "Money"), "Select a second Driver")
                 </div>
             </div>
     
@@ -55,7 +63,7 @@
                 @Html.LabelFor(model => model.ChassisID, new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
 
-                    @Html.DropDownListFor(model => model.ChassisID, new SelectList(ViewBag.Engine, "ID", "Name", "Money"), "Select a Chassis")
+                    @Html.DropDownListFor(model => model.ChassisID, new SelectList(ViewBag.Chassis, "ID", "Name", "Money"), "Select a Chassis")
                 </div>
             </div>
     
