--- a/Formule1/Views/Profile/Index.cshtml
+++ b/Formule1/Views/Profile/Index.cshtml
@@ -15,10 +15,15 @@
     <p>
         @Html.ActionLink("Create New", "Create")
     </p>
+    @if(Request.IsAuthenticated)
+    {
     <table class="table">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.UserNameID)
+            </th>
+            <th>
+              UserName
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Money)
@@ -47,6 +52,9 @@
                 @Html.DisplayFor(modelItem => item.UserNameID)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => User.Identity.Name)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Money)
             </td>
             <td>
@@ -57,6 +65,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DriverID)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SecondDriverID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.ChassisID)
@@ -70,5 +81,6 @@
     }
     
     </table>
+    }
 </body>
 </html>
