Money bug fix , 1 profile/account

--- a/Formule1/Views/Profile/Create.cshtml
+++ b/Formule1/Views/Profile/Create.cshtml
@@ -7,7 +7,13 @@
     var userid = @User.Identity.GetUserId();
 }
 
-<!DOCTYPE html>
+@if (Model == null)
+{
+    <h1>You can only create 1 profile</h1>
+}
+else
+{
+    <!DOCTYPE html>
 
 <html>
 <head>
@@ -26,7 +32,7 @@
             @Html.Hidden("UserNameID",(object)userid)
 
        
-            @Html.Hidden("Money", "200000")
+            
             <div class="form-group">
                 Teamname
                 <div class="col-md-10">
@@ -39,7 +45,7 @@
                 Engine
                 <div class="col-md-10">
              
-                         @Html.DropDownListFor(model => model.EngineID, new SelectList(ViewBag.Engine, "ID", "Name","Money"), "Select an Engine")
+                         @Html.DropDownListFor(model => model.EngineModel, new SelectList(ViewBag.Engine, "ID", "Name","Money"), "Select an Engine")
                 </div>
             </div>
     
@@ -80,3 +86,5 @@
     </div>
 </body>
 </html>
+}
+
