--- a/Formule1/Views/Profile/Index.cshtml
+++ b/Formule1/Views/Profile/Index.cshtml
@@ -1,20 +1,26 @@
-﻿@model IEnumerable<Formule1.Models.ProfileViewModel>
+﻿@model Formule1.Models.ProfileViewModel
 
 @{
     Layout = null;
+
 }
 
 <!DOCTYPE html>
-
-<html>
+@if(Model == null)
+{
+     <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+}
+else
+{
+  <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
 </head>
 <body>
-    <p>
-        @Html.ActionLink("Create New", "Create")
-    </p>
+   
     @if(Request.IsAuthenticated)
     {
     <table class="table">
@@ -46,41 +52,39 @@
             <th></th>
         </tr>
     
-    @foreach (var item in Model) {
+
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.UserNameID)
+                @Html.DisplayFor(model => model.UserNameID)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => User.Identity.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Money)
+                @Html.DisplayFor(model => model.Money)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TeamName)
+                @Html.DisplayFor(model => model.TeamName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.EngineID)
+                @Html.DisplayFor(model => model.EngineModel.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DriverID)
+                @Html.DisplayFor(model => model.DriverID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.SecondDriverID)
+                @Html.DisplayFor(model => model.SecondDriverID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ChassisID)
+                @Html.DisplayFor(model => model.ChassisID)
             </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-                @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-            </td>
+            
         </tr>
-    }
+    
     
     </table>
     }
 </body>
-</html>
+</html>  
+}
+
