--- a/Formule1/Views/Profile/Edit.cshtml
+++ b/Formule1/Views/Profile/Edit.cshtml
@@ -4,6 +4,8 @@
     Layout = null;
 }
 
+@if(Request.IsAuthenticated)
+    {
 <!DOCTYPE html>
 
 <html>
@@ -83,3 +85,5 @@
     </div>
 </body>
 </html>
+
+}
